Changes for 1.8.2

 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [ZBX-1859] fixed map element image (Aly)
 - [ZBX-954] fix minor typos (Richlv)

Changes for 1.8.1

 - [ZBX-1850] fixed warnings when saving host with enabled profile (Vedmak)
 - [ZBX-1779] fixed incorrect number of problems in Host Status widget (Vedmak)
 - [ZBX-1849] fixed colours of trigger severity in Host Status widget (Vedmak)
 - [ZBX-1757] fixed oracle 1.8 upgrade patch, not null constraints (Vedmak)
 - [ZBX-1762] fixed errors when editing media types (Vedmak)
 - [DEV-445] added support of system.stat[] under AIX (Sasha)
 - [ZBX-1633] fixed sysmaps in PostgreSQL upgrade patch (Sasha)
 - [ZBX-1617] fixed triggers duplicating in template linking for discovered hosts (Sasha)
 - [ZBX-1840] fixed bad performance of the node synchronization - fixed database index (Sasha)
 - [ZBX-1742] fixed processing of "system.uptime" check under Windows to return values as integers (Dmitry)
 - [ZBX-1786] fixed not remembered group when using paging in export screen (Vedmak)
 - [ZBX-1735] added "ERROR" words to some error messages in data cache module (Dmitry)
 - [ZBX-1321] fixed displaying of large unsigned int values in latest data (Vedmak)
 - [ZBX-1838] fixed value mapping in overview screen (Aly)
 - [ZBX-1788] fixed proxy configuration form showing hosts from all nodes (Vedmak)
 - [ZBX-954] fix typo in default trigger names (Richlv)
 - [ZBX-1746] fixed problems viewing map element (Aly)
 - [ZBX-1763] applied patch with translation for some javascript strings (Aly)
 - [DEV-447,DEV-448] added support of net.if.* under Windows (Sasha)
 - [ZBX-1582] fixed processing ssh.run[...] check to avoid the server crashing on libssh2 timeout (Dmitry)
 - [ZBX-1688] hosts, user doesn't have permission to, are shown gray in hostgroup configuration screen (Vedmak)
 - [ZBX-1608] fixed notifications after maintenance periods (Sasha)