@@ -1787,10 +1787,18 @@
 	'S_INCORRECT_TYPE_OF_ASORT_BY_KEY'=>	'Incorrect type of asort_by_key',
 	'S_DAYS_SMALL'=>			'days',
 	'S_B'=>			'B',
-	'S_M'=>			'M',
 	'S_K'=>			'K',
+	'S_KILO'=>		'Kilo',
+	'S_M'=>			'M',
+	'S_MEGA'=>		'Mega',
 	'S_G'=>			'G',
+	'S_GIGA'=>		'Giga',
 	'S_T'=>			'T',
+	'S_TERA'=>		'Tera',
+	'S_P'=>			'P',
+	'S_PETA'=>		'Peta',
+	'S_E'=>			'E',
+	'S_EXA'=>		'Exa',
 
 //	Menu
 
