@@ -1,5 +1,8 @@
 Changes for 1.8.2
 
+ - [ZBX-1785] fixed starttime in screens, slides on screen/slide switch (Aly)
+ - [ZBX-1784] improved displaying big numbers and units in graphs (Aly)
+ - [ZBX-1764] fixed right Y axis problem if on left Y axis no data (Aly)
  - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
  - [ZBX-1859] fixed map element image (Aly)
  - [ZBX-954] fix minor typos (Richlv)
